# Copyright 2020 Shift Cryptosecurity AG
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]

members = [
    "bitbox02-rust-c",
    "bitbox02-rust",
    "util",
    "bitbox02-noise",
    "bitbox02",
    "bitbox02-sys",
    "erc20_params",
    "streaming-silent-payments",
]

resolver = "2"

[workspace.dependencies]
bech32 = { version = "0.11.0", default-features = false }
bitcoin = { version = "0.32.2", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0" }
num-bigint = { version = "0.4.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
zeroize = "1.7.0"

[profile.release]
# This only affects the .elf output. Debug info is stripped from the final .bin.
# Paths to source code can still appear in the final bin, as they are part of the panic!() output.
debug = true

opt-level = 'z'
codegen-units = 1
panic = 'abort'
lto = true

[profile.dev]
opt-level = 'z'
