# SPDX-License-Identifier: Apache-2.0

[workspace]

members = [
    "bitbox02-rust-c",
    "bitbox02-rust",
    "bitbox-framed-serial-link",
    "util",
    "bitbox02-noise",
    "bitbox02",
    "bitbox-secp256k1",
    "bitbox02-sys",
    "erc20_params",
    "streaming-silent-payments",
    "bitbox-aes",
    "fatfs-sys",
    "bitbox-executor",
]

resolver = "2"

[workspace.dependencies]
# The secp-recovery feature is currently only needed in tests to make use of `RecoverableSignature`.
# Attempting to enable it conditionally only for tests somehow leads to linking errors (duplicate secp256k1 symbols).
bitcoin = { version = "0.32.7", default-features = false, features = ["secp-recovery"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }

# Forked for:
# - https://github.com/rust-bitcoin/rust-bip39/pull/76 -> custom commit can be removed once this is merged
# - async functionality
bip39 = { git = "https://github.com/BitBoxSwiss/rust-bip39.git", branch = "bitbox-20250922", default-features = false, features = ["zeroize"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
# force-soft-compact reduces the binary size by ~3kB. In future versions of sha2 this will change to
# be a backend config option.  See https://github.com/RustCrypto/hashes/pull/686.
sha2 = { version = "0.10.9", default-features = false, features = ["force-soft-compact"] }
sha3 = { version = "0.10.8", default-features = false }
digest = "0.10.6"
hmac = { version = "0.12.1", default-features = false, features = ["reset"] }
# We don't rely on this dep directly, the sha3 dep does. We list it here to enable the
# no_unroll feature to reduce the binary size, saving around 1528 bytes (as measured at time of
# writing, this might fluctuate over time).
keccak = { version = "0.1.4", default-features = false, features = ["no_unroll"] }
zeroize = "1.7.0"
futures-lite = { version = "2.6.1", default-features = false }
hex_lit = { version = "0.1.1", default-features = false }
crc = "3.0.1"

[patch.crates-io]
rtt-target = { git = "https://github.com/probe-rs/rtt-target.git", rev = "117d9519a5d3b1f4bc024bc05f9e3c5dec0a57f5" }

[profile.release]
# This only affects the .elf output. Debug info is stripped from the final .bin.
# Paths to source code can still appear in the final bin, as they are part of the panic!() output.
debug = true
# Optmimize maximally for size, 'z' should produce even less code than 's'
opt-level = 'z'
# 1 gives smaller binaries (16 is default in release mode)
codegen-units = 1
# Abort on panics in release builds.
panic = 'abort'
# LTO gives smaller binaries due to cross-crate optimizations
lto = true

# Mimic the release profile to save as much space as possible
[profile.dev]
opt-level = 'z'
# Set lto="thin" to get faster builds
lto = true
# Enabling debug assertions will increase binary size
debug-assertions = false
# Enabling overflow checks will increase binary size
overflow-checks = false
# Set to maximally 256 to compile more in parallel
codegen-units = 1
# Set to 'abort' to save space
panic = 'unwind'
# Set to false to potentially reduce binary size
incremental = true

[profile.test]
debug-assertions = true
overflow-checks = true
